# nextgismanager

./: .gitignore  CMakeLists.txt  README.md  copyright  index.html  params.json
opt/: CMakeLists.txt  update.sh
opt/config/: wxCatalog.xml  wxCatalogUI.xml  wxGISCatalog.xml  wxGISCommon.xml  wxGISCommon.xml.nix  wxGISCommon.xml.win  wxGISContDialog.xml  wxGISMap.xml  wxGISMon.xml  wxGISObjDialog.xml  wxGISServer.xml  wxGISToolbox.xml  wxServerCatalog.xml  wxTranslit.xml
opt/dialogs/: addtolist.fbp  identifydialog.fbp  remoteconndialog.fbp  sqlquerydialog.fbp
opt/loc/: THANKS.txt  TRANSLATORS.txt
opt/loc/0ru_old/: networking_cat.po  remoteserver_cat.po
opt/loc/cs/: app.mo  app.po  carto.mo  carto.po  cartoui.mo  cartoui.po  cat_app.mo  cat_app.po  catalog.mo  catalog.po  catalogui.mo  catalogui.po  core.mo  core.po  cs.mo  cs.po  cs_pg.mo  cs_pg.po  datasource.mo  datasource.po  framework.mo  framework.po  geoprocess.mo  geoprocess.po  geoprocessing.mo  geoprocessing.po  geoprocessingui.mo  geoprocessingui.po
opt/loc/es/: carto.mo  carto.po  cartoui.mo  cartoui.po  cat_app.mo  cat_app.po  catalog.mo  catalog.po  catalogui.mo  catalogui.po  core.mo  datasource.mo  datasource.po  es.mo  es.po  es_pg.mo  es_pg.po  framework.mo  framework.po  geoprocess.mo  geoprocess.po  geoprocessing.mo  geoprocessing.po  geoprocessingui.mo  geoprocessingui.po
opt/loc/gl_es/: gl_ES.mo  gl_ES.po
opt/loc/newtr/: app.po  carto.mo  cartoui.mo  cartoui.po  cat_app.mo  cat_app.po  catalog.mo  catalog.po  catalogui.mo  catalogui.po  core.mo  core.po  datasource.mo  datasource.po  display.mo  display.po  framework.mo  framework.po  geoprocess.mo  geoprocess.po  geoprocessing.mo  geoprocessing.po  geoprocessingui.mo
opt/loc/pt/: app.mo  app.po  carto.mo  carto.po  cartoui.mo  cartoui.po  cat_app.mo  cat_app.po  catalog.mo  catalog.po  catalogui.mo  catalogui.po  core.mo  core.po  datasource.mo  datasource.po  framework.mo  (+11 more)
src/carto/: CMakeLists.txt  drawinglayer.cpp  featurelayer.cpp  featurerenderer.cpp  layer.cpp  map.cpp  mapbitmap.cpp  mxevent.cpp  rasterlayer.cpp  rasterrenderer.cpp  renderer.cpp  stretch.cpp  transformthreads.cpp
src/cartoui/: CMakeLists.txt  cartocmd.cpp  drawingcmd.cpp  drawingmap.cpp  formatmenu.cpp  identifydlg.cpp  mapbitmap.cpp  mapview.cpp  mxeventui.cpp  rasterdatasetcmd.cpp  sqlquerydialog.cpp  tableview.cpp
src/cat_app/: CMakeLists.txt  catalogapp.cpp  catalogframe.cpp
src/catalog/: CMakeLists.txt  catop.cpp  contupdater.cpp  gxarchfolder.cpp  gxarchivefactory.cpp  gxcatalog.cpp  gxcsvfactory.cpp  gxdataset.cpp  gxdbconnections.cpp  gxdbconnfactory.cpp  gxdiscconnection.cpp  gxdiscconnections.cpp  gxevent.cpp  gxfile.cpp  gxfilefactory.cpp  gxfilters.cpp  gxfolder.cpp  gxfolderfactory.cpp  gxgisproj.cpp  gxgisprojfactory.cpp  gxgnm.cpp  gxgnmfactory.cpp  gxlocaldb.cpp  gxlocaldbfactory.cpp  gxmapinfofactory.cpp  gxmlconnstor.cpp  gxmldataset.cpp  gxmlfactory.cpp  gxngwconn.cpp  gxobject.cpp  gxobjectfactory.cpp  gxpostgisdataset.cpp  gxprjfactory.cpp  gxrasterfactory.cpp  gxremoteconn.cpp  gxshapefactory.cpp  gxshellconn.cpp  gxshellconnections.cpp  gxshellconnfactory.cpp  gxspatreffolder.cpp  (+5 more)
src/catalogui/: CMakeLists.txt  catalogcmd.cpp  createnewcmd.cpp  createremotedlgs.cpp  droptarget.cpp  finddlg.cpp  gxapplication.cpp  gxarchfolderui.cpp  gxarchivefactoryui.cpp  gxcatalogui.cpp  gxcontdialog.cpp  gxcontentview.cpp  gxcsvfactoryui.cpp  gxdatasetui.cpp  gxdbconnectionsui.cpp  gxdbconnfactoryui.cpp  gxdiscconnectionsui.cpp  gxdiscconnectionui.cpp  gxeventui.cpp  gxfilefactoryui.cpp  gxfileui.cpp  gxfolderfactoryui.cpp  gxfolderui.cpp  gxgisprojfactoryui.cpp  gxgisprojui.cpp  gxgnmfactoryui.cpp  gxgnmui.cpp  gxlocaldbfactoryui.cpp  gxlocaldbui.cpp  gxlocationcombobox.cpp  gxmapinfofactoryui.cpp  gxmapview.cpp  gxmldatasetui.cpp  gxmlfactoryui.cpp  gxngwconnui.cpp  gxnoview.cpp  gxobgdialog.cpp  gxobjcmd.cpp  gxpending.cpp  gxpostgisdatasetui.cpp  (+30 more)
src/conf/: CMakeLists.txt  confmain.cpp
src/core/: CMakeLists.txt  app.cpp  config.cpp  crypt.cpp  event.cpp  format.cpp  init.cpp  pointer.cpp  process.cpp
src/datasource/: CMakeLists.txt  cursor.cpp  datacontainer.cpp  dataset.cpp  featuredataset.cpp  filter.cpp  gdalinh.cpp  postgisdataset.cpp  rasterdataset.cpp  rasterop.cpp  spatialtree.cpp  spvalidator.cpp  sysop.cpp  table.cpp  vectorop.cpp  wmsdataset.cpp
src/display/: CMakeLists.txt  color.cpp  displayop.cpp  gisdisplay.cpp  rubberband.cpp  symbol.cpp
src/framework/: CMakeLists.txt  accelerator.cpp  addcommanddlg.cpp  animation.cpp  application.cpp  applicationbase.cpp  applicationex.cpp  checklist.cpp  command.cpp  commandbar.cpp  createcbdlg.cpp  customizedlg.cpp  dataobject.cpp  droptarget.cpp  icon.cpp  keycodedlg.cpp  menubar.cpp  progressdlg.cpp  progressor.cpp  propertypages.cpp  statusbar.cpp  tabstyle.cpp  toolbarmenu.cpp
src/freechart/: CMakeLists.txt  chart.cpp  marker.cpp
src/geoprocess_app/: CMakeLists.txt  processmain.cpp
src/geoprocessing/: CMakeLists.txt  gpcompstattool.cpp  gpcreateovrtool.cpp  gpdomain.cpp  gpexporttool.cpp  gpgeomverttoptstool.cpp  gporthocorrecttool.cpp  gpparam.cpp  gpprojecttool.cpp  gpraster.cpp  gpshapetotexttool.cpp  gpsubrasterbyvectortool.cpp  gpsumtabletool.cpp  gptable.cpp  gptool.cpp  gptoolmngr.cpp  gpvector.cpp  task.cpp  tskmngr.cpp
src/net/: CMakeLists.txt  curl.cpp  message.cpp  netconn.cpp  netevent.cpp  netfactory.cpp  network.cpp  servernet.cpp  tcp.cpp
src/remoteserver/: CMakeLists.txt  gxremoteserver.cpp  gxremoteservers.cpp  rxobjectclient.cpp
src/remoteserverui/: CMakeLists.txt  createnetworkconndlg.cpp  gxremoteserversui.cpp  gxremoteserverui.cpp  netfactoryui.cpp  remoteservercmd.cpp  rxdiscconnections.cpp  rxobjectclientui.cpp  serversearchdlg.cpp
src/srv_app/: CMakeLists.txt  serverapp.cpp  service.cpp
src/srv_framework/: CMakeLists.txt  auth.cpp  catalog.cpp  message.cpp  network.cpp  plugin.cpp  rxdiscconnections.cpp  rxobjectserver.cpp  server.cpp  service.cpp  xmlauth.cpp
src/tskmngr_app/: CMakeLists.txt  net.cpp  task.cpp  tskmngr.cpp  tskmngrapp.cpp
(+6183 files in other folders)
